Bug 68803 - Part2: Add test case TestInterfaceAsyncIterableSingle. r=thinker.lee

--- a/dom/bindings/test/mochitest.ini
+++ b/dom/bindings/test/mochitest.ini
@@ -76,6 +76,8 @@ skip-if = debug == false
 skip-if = debug == false
 [test_iterable.html]
 skip-if = debug == false
+[test_async_iterable.html]
+skip-if = debug == false
 [test_oom_reporting.html]
 skip-if = (verify && debug && (os == 'linux' || os == 'mac'))
 [test_domProxyArrayLengthGetter.html]
