Bug 91405 - Integrate battery API for Next. r=seinlin

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -1014,6 +1014,10 @@ description = bug 1377024
 description = WebRender equivalent for PCompositorBridge::SyncWithCompositor
 [PHal::GetCurrentBatteryInformation]
 description = legacy sync IPC - please add detailed description
+[PHal::GetBatteryTemperature]
+description = Get battery temperature
+[PHal::IsBatteryPresent]
+description = Check if battery present
 [PHal::GetCurrentNetworkInformation]
 description = legacy sync IPC - please add detailed description
 [PHal::GetScreenEnabled]
