Bug 95686 - Gecko/SIDL bridge: Gecko part r=claire.huang

--- a/b2g/sidl/components.conf
+++ b/b2g/sidl/components.conf
@@ -6,7 +6,14 @@ Classes = [
         'cid': '{943b4eb6-9f2f-4e5e-802b-3847c5ad5521}',
         'contract_ids': ['@mozilla.org/sidl-native/settings;1'],
         'type': 'nsISettingsManager',
-        'headers': ['sidl/SettingsManager.h'],
+        'headers': ['sidl/SidlComponents.h'],
         'constructor': 'sidl::ConstructSettingsManager',
+    },
+    {
+        'cid': '{915f248f-0a50-4475-a802-afbfe641edbb}',
+        'contract_ids': ['@mozilla.org/sidl-native/bridge;1'],
+        'type': 'nsIGeckoBridge',
+        'headers': ['sidl/SidlComponents.h'],
+        'constructor': 'sidl::ConstructGeckoBridge',
     },
 ]
