--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,7 @@ build:arm:
     TARGET_CPU_VARIANT: cortex-a53
     ANDROID_NDK: '~/.mozbuild/android-ndk-r20b-canary'
     PRODUCT_MANUFACTURER: QUALCOMM
+    MOZ_DISABLE_LTO: 1
   image: $DEFAULT_ARM_DOCKER_IMAGE
   stage: build
   tags:
