Bug 95376 - Mobile message porting from gecko48. r=jack.hung

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -2853,6 +2853,11 @@
   value: true
   mirror: always
 
+- name: dom.sms.enabled
+  type: bool
+  value: true
+  mirror: always
+
 #- name: telephony.vt.loopback.enabled
 #  type: bool
 #  value: false
