--- a/dom/mobilemessage/components.conf
+++ b/dom/mobilemessage/components.conf
@@ -29,4 +29,13 @@ Classes = [
         'constructor': 'SmsService',
         'processes': ProcessSelector.MAIN_PROCESS_ONLY,
     },
+
+    {
+        'cid': '{829c1dd6-0466-4591-836f-b8f6fd1f7ba5}',
+        'contract_ids': ['@mozilla.org/mobilemessage/mobilemessageservice;1'],
+        'singleton': True,
+        'type': 'nsIMobileMessageService',
+        'headers': ['MobileMessageService.h'],
+        'constructor': 'NS_CreateMobileMessageService',
+    },
 ]
